--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,7 +7,7 @@ layout: page
 	<li>
 		{%- assign date_format = site.texture.date_format | default: "%b %-d, %Y" -%}
 		<div class="post-meta">
-			<a class="post-link" href="{{ post.url | absolute_url }}">
+			<a class="post-link" href="{{site.url}}{{post.url}}">
 				<h2 class="post-title">{{ post.title | escape }}</h2>
 			</a>
 			<div class="post-date"><i class="icon-calendar"></i>{{ post.date | date: date_format }}</div>
