--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,7 +14,7 @@ layout: page
 		</div>
 		<div class="post">
 			{%- if site.show_excerpts -%}
-			{{ post.excerpt }}
+			{{ post.excerpt | strip_html | truncatewords: 30 }}
 			{%- endif -%}
 		</div>
 	</li>
